; ModuleID = '/home/carl/AnghaBench/radare2/libr/util/extr_binheap.c__heap_up.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/util/extr_binheap.c__heap_up.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 (i8*, i8*)*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, i64, i8*)* @_heap_up to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_heap_up(%struct.TYPE_3__* %0, i64 %1, i8* %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i64 %1, i64* %5, align 8
  store i8* %2, i8** %6, align 8
  br label %8

8:                                                ; preds = %36, %3
  %9 = load i64, i64* %5, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %25

11:                                               ; preds = %8
  %12 = load i64, i64* %5, align 8
  %13 = sub i64 %12, 1
  %14 = lshr i64 %13, 1
  store i64 %14, i64* %7, align 8
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i64 (i8*, i8*)*, i64 (i8*, i8*)** %16, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 1
  %21 = load i64, i64* %7, align 8
  %22 = call i8* @r_pvector_at(i32* %20, i64 %21)
  %23 = call i64 %17(i8* %18, i8* %22)
  %24 = icmp slt i64 %23, 0
  br label %25

25:                                               ; preds = %11, %8
  %26 = phi i1 [ false, %8 ], [ %24, %11 ]
  br i1 %26, label %27, label %38

27:                                               ; preds = %25
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 1
  %30 = load i64, i64* %5, align 8
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 1
  %33 = load i64, i64* %7, align 8
  %34 = call i8* @r_pvector_at(i32* %32, i64 %33)
  %35 = call i32 @r_pvector_set(i32* %29, i64 %30, i8* %34)
  br label %36

36:                                               ; preds = %27
  %37 = load i64, i64* %7, align 8
  store i64 %37, i64* %5, align 8
  br label %8

38:                                               ; preds = %25
  %39 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 1
  %41 = load i64, i64* %5, align 8
  %42 = load i8*, i8** %6, align 8
  %43 = call i32 @r_pvector_set(i32* %40, i64 %41, i8* %42)
  ret void
}

declare dso_local i8* @r_pvector_at(i32*, i64) #1

declare dso_local i32 @r_pvector_set(i32*, i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
